Refactor monthly data analysis code

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -4,6 +4,14 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "1NETUgleJ0NK",
+        "Ncsay1Z854R_",
+        "2YAUw_BBi5En",
+        "buLnCNYLTu7r",
+        "EsUzswpVgASl",
+        "TFvNAuLdhjeI"
+      ],
       "toc_visible": true
     },
     "kernelspec": {
@@ -148,7 +156,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Monthly Analysis Preparation"
+        "## Monthly Analysis"
       ],
       "metadata": {
         "id": "5zdQAivMcJkB"
@@ -170,6 +178,30 @@
       ],
       "metadata": {
         "id": "dIvlGq_X9fuN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def filter_data_by_month(df, year_month_str):\n",
+        "    \"\"\"Filter the DataFrame for the given year and month.\"\"\"\n",
+        "    try:\n",
+        "        year_month = pd.Period(year_month_str, freq='M')\n",
+        "    except:\n",
+        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "        return None\n",
+        "\n",
+        "    if year_month not in df['YearMonth'].values:\n",
+        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
+        "        return None\n",
+        "\n",
+        "    # Filter the data for the given year and month\n",
+        "    return df[df['YearMonth'] == year_month]"
+      ],
+      "metadata": {
+        "id": "zMKWkMvGGysX"
       },
       "execution_count": null,
       "outputs": []
@@ -302,21 +334,10 @@
       "cell_type": "code",
       "source": [
         "# Function to plot top 20 authors for a given year and month\n",
-        "def plot_top_authors_for_month(year_month):\n",
-        "\n",
-        "    # Check if the input format is correct (e.g., '2023-05')\n",
-        "    try:\n",
-        "        year_month = pd.Period(year_month, freq='M')\n",
-        "    except:\n",
-        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "def plot_top_authors_for_month(df, year_month_str):\n",
+        "    month_data = filter_data_by_month(df, year_month_str)\n",
+        "    if month_data is None:\n",
         "        return\n",
-        "    # Check if the year_month exists in the dataset\n",
-        "    if year_month not in df['YearMonth'].values:\n",
-        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
-        "        return\n",
-        "\n",
-        "    # Filter the data for the given year and month\n",
-        "    month_data = author_post_counts[author_post_counts['YearMonth'] == year_month]\n",
         "\n",
         "    # Get the top 20 authors for the month\n",
         "    top_authors = month_data.sort_values(by='PostCount', ascending=False).head(20)\n",
@@ -324,7 +345,7 @@
         "    # Plotting\n",
         "    plt.figure(figsize=(10, 6))\n",
         "    top_authors.set_index('Author')['PostCount'].plot(kind='bar')\n",
-        "    plt.title(f'Top 20 Authors in {year_month}')\n",
+        "    plt.title(f'Top 20 Authors in {year_month_str}')\n",
         "    plt.xlabel('Author')\n",
         "    plt.ylabel('Number of Posts')\n",
         "    plt.xticks(rotation=45, ha='right')\n",
@@ -340,7 +361,7 @@
       "cell_type": "code",
       "source": [
         "# Example usage\n",
-        "plot_top_authors_for_month('2023-07')  # Replace with the desired year-month"
+        "plot_top_authors_for_month(author_post_counts, '2023-07')  # Replace with the desired year-month"
       ],
       "metadata": {
         "id": "l5QVPKoI872u"
@@ -412,22 +433,13 @@
       "cell_type": "code",
       "source": [
         "# Function to generate bar chart for top frequent terms for a given year and month\n",
-        "def plot_top_terms_for_month(year_month):\n",
-        "    try:\n",
-        "        year_month = pd.Period(year_month, freq='M')\n",
-        "    except:\n",
-        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "def plot_top_terms_for_month(df, year_month_str):\n",
+        "    month_data = filter_data_by_month(df, year_month_str)\n",
+        "    if month_data is None:\n",
         "        return\n",
-        "\n",
-        "    if year_month not in df['YearMonth'].values:\n",
-        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
-        "        return\n",
-        "\n",
-        "    # Filter the data for the given year and month\n",
-        "    month_data = df[df['YearMonth'] == year_month]['Content'].dropna()\n",
         "\n",
         "    # Tokenize and count terms\n",
-        "    terms = month_data.apply(tokenize).sum()\n",
+        "    terms = month_data['Content'].apply(tokenize).sum()\n",
         "    term_counts = Counter(terms)\n",
         "\n",
         "    # Get the most common terms\n",
@@ -439,7 +451,7 @@
         "    # Create a bar chart\n",
         "    plt.figure(figsize=(10, 6))\n",
         "    plt.bar(terms, counts)\n",
-        "    plt.title(f'Top 20 Frequent Terms in {year_month}')\n",
+        "    plt.title(f'Top 20 Frequent Terms in {year_month_str}')\n",
         "    plt.xlabel('Terms')\n",
         "    plt.ylabel('Frequency')\n",
         "    plt.xticks(rotation=45)\n",
@@ -455,7 +467,7 @@
       "cell_type": "code",
       "source": [
         "# Example usage\n",
-        "plot_top_terms_for_month('2023-12')  # Replace with the desired year-month"
+        "plot_top_terms_for_month(df, '2023-12')  # Replace with the desired year-month"
       ],
       "metadata": {
         "id": "8_6qlP9YdI9K"
@@ -488,22 +500,13 @@
       "cell_type": "code",
       "source": [
         "# Function to generate a word cloud for a given year and month\n",
-        "def generate_wordcloud_for_month(year_month, mask):\n",
-        "    try:\n",
-        "        year_month = pd.Period(year_month, freq='M')\n",
-        "    except:\n",
-        "        print(f\"Invalid input format. Please use 'YYYY-MM' format.\")\n",
+        "def generate_wordcloud_for_month(df, year_month_str, mask):\n",
+        "    month_data = filter_data_by_month(df, year_month_str)\n",
+        "    if month_data is None:\n",
         "        return\n",
-        "\n",
-        "    if year_month not in df['YearMonth'].values:\n",
-        "        print(f\"The month {year_month} does not exist in the dataset.\")\n",
-        "        return\n",
-        "\n",
-        "    # Filter the data for the given year and month\n",
-        "    month_data = df[df['YearMonth'] == year_month]['Content'].dropna()\n",
         "\n",
         "    # Tokenize and count terms, filtering out stop words\n",
-        "    terms = month_data.apply(tokenize).sum()\n",
+        "    terms = month_data['Content'].apply(tokenize).sum()\n",
         "    term_string = ' '.join(terms)  # Join all terms into a single string\n",
         "\n",
         "    # Generate a word cloud\n",
@@ -517,7 +520,7 @@
         "    plt.figure(figsize=(10, 10))\n",
         "    plt.imshow(wordcloud, interpolation='bilinear')\n",
         "    plt.axis('off')\n",
-        "    plt.title(f'Word Cloud for {year_month}')\n",
+        "    plt.title(f'Word Cloud for {year_month_str}')\n",
         "    plt.show()"
       ],
       "metadata": {
@@ -530,7 +533,7 @@
       "cell_type": "code",
       "source": [
         "# Example usage\n",
-        "generate_wordcloud_for_month('2023-08', mask_image)  # Replace with the desired year-month"
+        "generate_wordcloud_for_month(df, '2023-12', mask_image)  # Replace with the desired year-month"
       ],
       "metadata": {
         "id": "7AN0uOfaQkVt"
@@ -812,46 +815,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Processing with partial data for test"
-      ],
-      "metadata": {
-        "id": "8KEgPddmDiJ2"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_LDAtest = df.head(1000).copy()"
-      ],
-      "metadata": {
-        "id": "yGu9Wyam2I7t"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_LDAtest['tokenized'] = df_LDAtest['Content'].apply(tokenize)\n",
-        "\n",
-        "# Vectorize the text\n",
-        "vectorizer = CountVectorizer(max_features=1000)\n",
-        "X = vectorizer.fit_transform(df_LDAtest['tokenized'])\n",
-        "\n",
-        "# Apply LDA\n",
-        "lda = LatentDirichletAllocation(n_components=5, random_state=0)  # Adjust number of topics (n_components)\n",
-        "lda.fit(X)"
-      ],
-      "metadata": {
-        "id": "wL1o6ADe-HDq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Visuaization"
+        "Visuaization"
       ],
       "metadata": {
         "id": "Km-nEeAADnRB"
@@ -886,14 +850,52 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "LDA Analysis for a Specific Month"
+      ],
+      "metadata": {
+        "id": "Pcu_mrvJKJjd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Call the plot_top_words function with the LDA model\n",
-        "n_top_words = 10\n",
-        "plot_top_words(lda, vectorizer.get_feature_names_out(), n_top_words, \"Topics in LDA model\")"
+        "def lda_analysis_for_month(df, year_month_str, n_topics=5, n_top_words=10):\n",
+        "    # Filter data for the specified month\n",
+        "    month_data = filter_data_by_month(df, year_month_str)\n",
+        "    if month_data is None:\n",
+        "        return\n",
+        "\n",
+        "    month_data_LDA = month_data.copy() # create a copy for analysis\n",
+        "\n",
+        "    # Tokenize and prepare text data\n",
+        "    month_data_LDA['tokenized_content'] = month_data_LDA['Content'].apply(tokenize)\n",
+        "\n",
+        "    # Vectorize the text\n",
+        "    vectorizer = CountVectorizer(max_features=1000)\n",
+        "    X = vectorizer.fit_transform(month_data_LDA['tokenized_content'])\n",
+        "\n",
+        "    # Perform LDA\n",
+        "    lda = LatentDirichletAllocation(n_components=n_topics, random_state=0)\n",
+        "    lda.fit(X)\n",
+        "\n",
+        "    # Plot the top words for each topic\n",
+        "    plot_top_words(lda, vectorizer.get_feature_names_out(), n_top_words, f\"Top {n_top_words} words for topics in {year_month_str}\")"
       ],
       "metadata": {
         "id": "EM1eDJTz-Pkk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lda_analysis_for_month(df, '2023-12', n_topics=5, n_top_words=10)"
+      ],
+      "metadata": {
+        "id": "MZfV7PlWKmsk"
       },
       "execution_count": null,
       "outputs": []
