--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -7,8 +7,8 @@
       "collapsed_sections": [
         "1NETUgleJ0NK",
         "Ncsay1Z854R_",
-        "2YAUw_BBi5En",
-        "buLnCNYLTu7r",
+        "g8AIs2cWQ3av",
+        "HVqA4iRRBDCG",
         "EsUzswpVgASl",
         "TFvNAuLdhjeI"
       ],
@@ -70,6 +70,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
+        "from time import time\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.dates as mdates\n",
         "import matplotlib.font_manager as fm\n",
@@ -90,6 +91,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# File Processing"
+      ],
+      "metadata": {
+        "id": "zE7RHgPI-0iV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -100,15 +110,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# File Processing"
-      ],
-      "metadata": {
-        "id": "zE7RHgPI-0iV"
-      }
     },
     {
       "cell_type": "code",
@@ -202,6 +203,66 @@
       ],
       "metadata": {
         "id": "zMKWkMvGGysX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Preprocessing"
+      ],
+      "metadata": {
+        "id": "E75zvR7gqAvF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Stop Words"
+      ],
+      "metadata": {
+        "id": "5bMpc2dZnjGM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a list of words to be excluded\n",
+        "stop_words = set(['저', '거', '뭐', '것', '그', '수', '더', '지금', '분', '그냥', '요',\n",
+        "                  '제', '때', '혹시', '왜', '이', '좀', '해', '네', '안',\n",
+        "                  '가요', '다시', '해당', '용', '넵', '전', '오', '또', '개',\n",
+        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명',\n",
+        "                  '넹', '은', '및', '알', '데', '중', '도', '건', '로',\n",
+        "                  '게', '를', '여'])"
+      ],
+      "metadata": {
+        "id": "VBqe6xlunkov"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Okt Tokenizer"
+      ],
+      "metadata": {
+        "id": "YD1JK6ETqCga"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Initialize the tokenizer\n",
+        "okt = Okt()\n",
+        "\n",
+        "def tokenize(text):\n",
+        "    # Extract nouns\n",
+        "    return [word for word in okt.nouns(text) if word not in stop_words]"
+      ],
+      "metadata": {
+        "id": "QWt-FfrrqExV"
       },
       "execution_count": null,
       "outputs": []
@@ -377,39 +438,6 @@
       "metadata": {
         "id": "g8AIs2cWQ3av"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Tokenizer"
-      ],
-      "metadata": {
-        "id": "2YAUw_BBi5En"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Initialize the tokenizer\n",
-        "okt = Okt()\n",
-        "\n",
-        "# Define a list of words to be excluded\n",
-        "stop_words = set(['저', '거', '뭐', '것', '그', '수', '더', '지금', '분', '그냥', '요',\n",
-        "                  '제', '때', '혹시', '왜', '이', '좀', '해', '네', '안',\n",
-        "                  '가요', '다시', '해당', '용', '넵', '전', '오', '또', '개',\n",
-        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명',\n",
-        "                  '넹', '은', '및', '알', '데', '중', '도', '건', '로',\n",
-        "                  '게', '를', '여'])\n",
-        "\n",
-        "def tokenize(text):\n",
-        "    # Extract nouns\n",
-        "    return [word for word in okt.nouns(text) if word not in stop_words]"
-      ],
-      "metadata": {
-        "id": "oLOqd1bWQ8Xn"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -782,39 +810,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tokenizer"
-      ],
-      "metadata": {
-        "id": "6dwWwSCm96Ez"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Initialize the tokenizer\n",
-        "okt = Okt()\n",
-        "\n",
-        "# Define a list of words to be excluded\n",
-        "stop_words = set(['저', '거', '뭐', '것', '그', '수', '더', '지금', '분', '그냥', '요',\n",
-        "                  '제', '때', '혹시', '왜', '이', '좀', '해', '네', '안',\n",
-        "                  '가요', '다시', '해당', '용', '넵', '전', '오', '또', '개',\n",
-        "                  '오늘', '정도', '말씀', '말', '나', '내', '건가', '명',\n",
-        "                  '넹', '은', '및', '알', '데', '중', '도', '건', '로',\n",
-        "                  '게', '를', '여'])\n",
-        "\n",
-        "def tokenize(text):\n",
-        "    tokens = [word for word in okt.nouns(text) if word not in stop_words]\n",
-        "    return ' '.join(tokens)  # Join tokens back into a string"
-      ],
-      "metadata": {
-        "id": "51neS98395g8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Visuaization"
       ],
       "metadata": {
@@ -824,8 +819,8 @@
     {
       "cell_type": "code",
       "source": [
-        "def plot_top_words(model, feature_names, n_top_words, title):\n",
-        "    fig, axes = plt.subplots(1, 5, figsize=(25, 5), sharex=True) # 1 row, 5 subfigures\n",
+        "def plot_top_words(model, n_topics, feature_names, n_top_words, title):\n",
+        "    fig, axes = plt.subplots(1, n_topics, figsize=(25, 5), sharex=True) # 1 row, n_topics subfigures\n",
         "    axes = axes.flatten()\n",
         "    for topic_idx, topic in enumerate(model.components_):\n",
         "        top_features_ind = topic.argsort()[-n_top_words:]\n",
@@ -870,18 +865,26 @@
         "    month_data_LDA = month_data.copy() # create a copy for analysis\n",
         "\n",
         "    # Tokenize and prepare text data\n",
-        "    month_data_LDA['tokenized_content'] = month_data_LDA['Content'].apply(tokenize)\n",
+        "    # Join tokens into a string for LDA analysis\n",
+        "    month_data_LDA['tokenized_content'] = month_data_LDA['Content'].apply(\n",
+        "        lambda x: ' '.join(tokenize(x)) if pd.notnull(x) else ''\n",
+        "    )\n",
         "\n",
         "    # Vectorize the text\n",
         "    vectorizer = CountVectorizer(max_features=1000)\n",
         "    X = vectorizer.fit_transform(month_data_LDA['tokenized_content'])\n",
         "\n",
         "    # Perform LDA\n",
-        "    lda = LatentDirichletAllocation(n_components=n_topics, random_state=0)\n",
+        "    lda = LatentDirichletAllocation(\n",
+        "        n_components=n_topics,\n",
+        "        random_state=0\n",
+        "        )\n",
+        "    t0 = time()\n",
         "    lda.fit(X)\n",
+        "    print(\"LDA done in %0.3fs.\" % (time() - t0))\n",
         "\n",
         "    # Plot the top words for each topic\n",
-        "    plot_top_words(lda, vectorizer.get_feature_names_out(), n_top_words, f\"Top {n_top_words} words for topics in {year_month_str}\")"
+        "    plot_top_words(lda, n_topics, vectorizer.get_feature_names_out(), n_top_words, f\"Top {n_top_words} words for topics in {year_month_str}\")"
       ],
       "metadata": {
         "id": "EM1eDJTz-Pkk"
