--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Import"
+        "# Preparation"
       ],
       "metadata": {
         "id": "cYVzt4atYqeC"
@@ -93,7 +93,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# File Processing"
+        "## File Processing"
       ],
       "metadata": {
         "id": "zE7RHgPI-0iV"
@@ -125,7 +125,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Content Validity Check"
+        "### Content Validity Check"
       ],
       "metadata": {
         "id": "D2nz-NLu3D5R"
@@ -157,7 +157,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Monthly Analysis"
+        "### Monthly Analysis"
       ],
       "metadata": {
         "id": "5zdQAivMcJkB"
@@ -210,7 +210,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Preprocessing"
+        "## Tokenizer"
       ],
       "metadata": {
         "id": "E75zvR7gqAvF"
@@ -219,7 +219,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Stop Words"
+        "### Stop Words"
       ],
       "metadata": {
         "id": "5bMpc2dZnjGM"
@@ -245,7 +245,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Okt Tokenizer"
+        "### Okt Tokenizer"
       ],
       "metadata": {
         "id": "YD1JK6ETqCga"
