Adjust parameters for LDA

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -847,7 +847,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "LDA Analysis for a Specific Month"
+        "LDA Analysis for a Specific Month\n",
+        "\n",
+        "* Here we treat each text as a document"
       ],
       "metadata": {
         "id": "Pcu_mrvJKJjd"
@@ -862,7 +864,7 @@
         "    if month_data is None:\n",
         "        return\n",
         "\n",
-        "    month_data_LDA = month_data.copy() # create a copy for analysis\n",
+        "    month_data_LDA = month_data.copy() # create a copy of dataframe for analysis\n",
         "\n",
         "    # Tokenize and prepare text data\n",
         "    # Join tokens into a string for LDA analysis\n",
@@ -870,21 +872,26 @@
         "        lambda x: ' '.join(tokenize(x)) if pd.notnull(x) else ''\n",
         "    )\n",
         "\n",
-        "    # Vectorize the text\n",
-        "    vectorizer = CountVectorizer(max_features=1000)\n",
+        "    # Convert a collection of texts to a matrix of token counts\n",
+        "    # vocabulary with top max_features, appearing more than min_df times\n",
+        "    vectorizer = CountVectorizer(max_df=0.95, min_df=2,\n",
+        "                    max_features=2500,\n",
+        "                    stop_words=list(stop_words))\n",
         "    X = vectorizer.fit_transform(month_data_LDA['tokenized_content'])\n",
         "\n",
         "    # Perform LDA\n",
         "    lda = LatentDirichletAllocation(\n",
         "        n_components=n_topics,\n",
-        "        random_state=0\n",
+        "        max_iter=50, # epochs\n",
+        "        random_state=0 # for reproducible results\n",
         "        )\n",
         "    t0 = time()\n",
         "    lda.fit(X)\n",
         "    print(\"LDA done in %0.3fs.\" % (time() - t0))\n",
         "\n",
         "    # Plot the top words for each topic\n",
-        "    plot_top_words(lda, n_topics, vectorizer.get_feature_names_out(), n_top_words, f\"Top {n_top_words} words for topics in {year_month_str}\")"
+        "    plot_top_words(lda, n_topics, vectorizer.get_feature_names_out(),\n",
+        "            n_top_words, f\"Top {n_top_words} words for topics in {year_month_str}\")"
       ],
       "metadata": {
         "id": "EM1eDJTz-Pkk"
