Remove repetitive stopwords processing

--- a/analysis/Korean_Online_Chat_Analysis.ipynb
+++ b/analysis/Korean_Online_Chat_Analysis.ipynb
@@ -874,9 +874,10 @@
         "\n",
         "    # Convert a collection of texts to a matrix of token counts\n",
         "    # vocabulary with top max_features, appearing more than min_df times\n",
-        "    vectorizer = CountVectorizer(max_df=0.95, min_df=2,\n",
-        "                    max_features=2500,\n",
-        "                    stop_words=list(stop_words))\n",
+        "    vectorizer = CountVectorizer(\n",
+        "        max_df=0.95, min_df=2,\n",
+        "        max_features=2500\n",
+        "        )\n",
         "    X = vectorizer.fit_transform(month_data_LDA['tokenized_content'])\n",
         "\n",
         "    # Perform LDA\n",
@@ -890,8 +891,10 @@
         "    print(\"LDA done in %0.3fs.\" % (time() - t0))\n",
         "\n",
         "    # Plot the top words for each topic\n",
-        "    plot_top_words(lda, n_topics, vectorizer.get_feature_names_out(),\n",
-        "            n_top_words, f\"Top {n_top_words} words for topics in {year_month_str}\")"
+        "    plot_top_words(\n",
+        "        lda, n_topics, vectorizer.get_feature_names_out(), n_top_words,\n",
+        "        f\"Top {n_top_words} words for topics in {year_month_str}\"\n",
+        "        )"
       ],
       "metadata": {
         "id": "EM1eDJTz-Pkk"
